--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,9 +10,10 @@ hiltAndroidVersion = "1.2.0"
 junit = "4.13.2"
 kotlin = "2.0.21"
 kotlinxSerializationCore = "1.7.3"
-ksp = "2.0.21-1.0.25"
+ksp = "2.0.21-1.0.28"
 lifecycleRuntimeKtx = "2.8.7"
-navigationCompose = "2.8.4"
+#navigationCompose = "2.8.4"
+navigationKiwiVersion = "0.10.0"
 roomVersion = "2.6.1"
 timber = "5.0.1"
 
@@ -38,10 +39,11 @@ compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4
 compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 compose-material-ripple = { group = "androidx.compose.material", name = "material-ripple" }
 compose-viewbinding = { group = "androidx.compose.ui", name = "ui-viewbinding" }
-compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+#compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 compose-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata" }
 compose-material-icons-core = { group = "androidx.compose.material", name = "material-icons-core" }
 compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
+navigation-kiwi = { module = "com.kiwi.navigation-compose.typed:core", version.ref = "navigationKiwiVersion" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hiltVersion" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hiltVersion" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -60,7 +62,7 @@ composeBundle = [
     "compose-material3",
     "compose-material-ripple",
     "compose-viewbinding",
-    "compose-navigation",
+#    "compose-navigation",
     "compose-runtime-livedata",
     "compose-material-icons-core",
     "compose-material-icons-extended",
